Commented the code

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.sound.min.js"></script>
 
-    <script src="src/utility.js"></script>
+    <script src="src/matrix.js"></script>
     <script src="src/piece.js"></script>
     <script src="src/chess.js"></script>
     <script src="src/sketch.js"></script>
