--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
     <title>Chess!</title>
+    <link rel="stylesheet" type="text/css" href="styles/main.css" />
+    <meta charset="UTF-8" />
   </head>
   <body>
+    <header>
+      <h1>Chess!</h1>
+    </header>
+    <div class="wrapper">
+      <!-- Chess Game -->
+      <div class="container main">
+        <div id="chess"></div>
+      </div>
+      <!-- Settings -->
+      <aside class="container aside settings">
+        <h1>Settings</h1>
+        <ul class="settings-items-list">
+          <li class="settings-item">
+            <span>FEN String</span>
+            <input type="text" name="fen-string" id="fen-string-input" />
+          </li>
+        </ul>
+        <div class="buttons">
+          <button id="save-button" class="save">Save</button>
+        </div>
+      </aside>
+      <!-- Timer -->
+      <aside class="container aside timer">
+        <h1>Timer</h1>
+        <div class="score">
+          <p>TODO: score</p>
+        </div>
+        <div class="buttons">
+          <button id="start-button" class="start">Start</button>
+          <button id="restart-button" class="restart">Restart</button>
+        </div>
+      </aside>
+    </div>
     <script src="bundle.js"></script>
   </body>
 </html>
