--- a/public/index.html
+++ b/public/index.html
@@ -15,27 +15,13 @@
         <div id="chess"></div>
       </div>
       <!-- Settings -->
-      <aside class="container aside settings">
-        <h1>Settings</h1>
-        <ul class="settings-items-list">
-          <li class="settings-item">
-            <span>FEN String</span>
-            <input type="text" name="fen-string" id="fen-string-input" />
-          </li>
-        </ul>
-        <div class="buttons">
-          <button id="save-button" class="save">Save</button>
+      <aside class="aside">
+        <div class="container panel">
+          <h1>Score</h1>
         </div>
-      </aside>
-      <!-- Timer -->
-      <aside class="container aside timer">
-        <h1>Timer</h1>
-        <div class="score">
-          <p>TODO: score</p>
-        </div>
-        <div class="buttons">
-          <button id="start-button" class="start">Start</button>
-          <button id="restart-button" class="restart">Restart</button>
+        <!-- Timer -->
+        <div class="container panel">
+          <h1>Timer</h1>
         </div>
       </aside>
     </div>
