Implemented scores UI

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,15 @@
       <!-- Settings -->
       <aside class="aside">
         <div class="container panel">
-          <h1>Score</h1>
+          <h1>Round Summary</h1>
+          <span
+            >White Score:
+            <p id="white-score">0</p></span
+          >
+          <span
+            >Black Score:
+            <p id="black-score">0</p></span
+          >
         </div>
         <!-- Timer -->
         <div class="container panel">
