Implemented scores UI

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,23 @@
       <div class="container main">
         <div id="chess"></div>
       </div>
-      <!-- Settings -->
       <aside class="aside">
+        <!-- Summary -->
         <div class="container panel">
-          <h1>Score</h1>
+          <h1>Round Summary</h1>
+          <span
+            >White Score:
+            <p id="white-score">0</p></span
+          >
+          <span
+            >Black Score:
+            <p id="black-score">0</p></span
+          >
+          <div class="buttons">
+            <button class="button" style="background-color: lightgreen">
+              Restart
+            </button>
+          </div>
         </div>
         <!-- Timer -->
         <div class="container panel">
