--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
         <!-- Summary -->
         <div class="container panel">
           <h1>Round Summary</h1>
+          <span>
+            Turn:
+            <p id="turn">White</p>
+          </span>
           <span
             >White Score:
             <p id="white-score">0</p></span
@@ -27,7 +31,11 @@
             <p id="black-score">0</p></span
           >
           <div class="buttons">
-            <button class="button" style="background-color: lightgreen">
+            <button
+              id="restart"
+              class="button"
+              style="background-color: lightgreen"
+            >
               Restart
             </button>
           </div>
