Implemented AI chooser + bug fix

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,14 @@
         <div class="container panel">
           <h1>Round Summary</h1>
           <span>
+            Opponent:
+            <select id="opponent-chooser" name="opponent">
+              <option value="second-player">Second Player</option>
+              <option value="random-AI">Random AI</option>
+            </select>
+          </span>
+          <hr class="rounded" />
+          <span>
             Turn:
             <p id="turn">White</p>
           </span>
