Refactored code to include SCSS in webpack

--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <title>Chess!</title>
-    <link rel="stylesheet" type="text/css" href="styles/main.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="styles/main.css" /> -->
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   </head>
   <body>
     <header>
