--- a/app/index.html
+++ b/app/index.html
@@ -2,21 +2,56 @@
 <html lang="en">
   <head>
     <title>Chess!</title>
-    <!-- <link rel="stylesheet" type="text/css" href="styles/main.css" /> -->
+    <script
+      src="https://kit.fontawesome.com/09bd532972.js"
+      crossorigin="anonymous"
+    ></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   </head>
   <body>
     <header>
-      <h1>Chess!</h1>
+      <h1>Chess! <i class="fa-solid fa-chess"></i></h1>
     </header>
     <div class="wrapper">
       <!-- Chess Game -->
-      <div class="container main">
-        <div id="chess"></div>
-      </div>
+      <div id="chess" class="container main"></div>
       <aside class="aside">
+        <!-- #region Timer -->
+        <div class="container panel">
+          <h1>Timer</h1>
+
+          <div class="clocks">
+            <div class="clock player">
+              <button class="clock-button up" id="up-A">
+                <i class="fa-solid fa-arrow-up"></i>
+              </button>
+              <span class="time" id="player-timer">05:00</span>
+              <button class="clock-button down" id="down-A">
+                <i class="fa-solid fa-arrow-down"></i>
+              </button>
+            </div>
+            <p>vs</p>
+            <div class="clock opponent">
+              <button class="clock-button up" id="up-B">
+                <i class="fa-solid fa-arrow-up"></i>
+              </button>
+              <span class="time" id="opponent-timer">05:00</span>
+              <button class="clock-button down" id="down-B">
+                <i class="fa-solid fa-arrow-down"></i>
+              </button>
+            </div>
+          </div>
+          <div class="buttons">
+            <button id="start-timer" class="button">
+              <i class="fa-solid fa-play"></i>
+            </button>
+          </div>
+          <hr class="solid" />
+          <p class="note">Timers will switch automatically</p>
+        </div>
+        <!-- #endregion -->
         <!-- #region Summary -->
         <div class="container panel">
           <h1>Round Summary</h1>
@@ -41,36 +76,13 @@
             <p id="black-score">0</p></span
           >
           <div class="buttons">
-            <button id="restart" class="button">♻︎</button>
+            <button id="restart" class="button">
+              <i class="fa-solid fa-rotate-right"></i>
+            </button>
           </div>
-        </div>
-        <!-- #endregion -->
-        <!-- #region Timer -->
-        <div class="container panel">
-          <h1>Timer</h1>
-
-          <div class="clocks">
-            <div class="clock player">
-              <button class="clock-button up" id="up-A">⬆</button>
-              <span class="time" id="player-timer">05:00</span>
-              <button class="clock-button down" id="down-A">⬇</button>
-            </div>
-            <p>vs</p>
-            <div class="clock opponent">
-              <button class="clock-button up" id="up-B">⬆</button>
-              <span class="time" id="opponent-timer">05:00</span>
-              <button class="clock-button down" id="down-B">⬇</button>
-            </div>
-          </div>
-          <div class="buttons">
-            <button id="start-timer" class="button">▶</button>
-          </div>
-          <hr class="solid" />
-          <p class="note">Timers will switch automatically</p>
         </div>
         <!-- #endregion -->
       </aside>
     </div>
-    <script src="bundle.js"></script>
   </body>
 </html>
