Improved UI/UX + Bug fixes

--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Chess!</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <script
       src="https://kit.fontawesome.com/09bd532972.js"
       crossorigin="anonymous"
@@ -84,5 +85,20 @@
         <!-- #endregion -->
       </aside>
     </div>
+    <footer>
+      <div class="left">
+        <h3>Credits:</h3>
+        <span>Icons: <a>Fontawesome</a></span>
+        <span
+          >Favicon
+          <a href="https://www.flaticon.com/free-icons/chess">Flaticon</a></span
+        >
+      </div>
+      <div class="right">
+        <h3>Powered by:</h3>
+        <span>angelobdev</span>
+        <span>antonioo_dev</span>
+      </div>
+    </footer>
   </body>
 </html>
