Some fixes for casting

--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,7 @@
       <div class="right">
         <h3>Powered by:</h3>
         <span>angelobdev</span>
-        <span>antonioo_dev</span>
+        <span>antoniooodev</span>
       </div>
     </footer>
   </body>
