--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<title>Chess!</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
-		<script src="https://kit.fontawesome.com/09bd532972.js" crossorigin="anonymous"></script>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<script defer="defer" src="https://kit.fontawesome.com/09bd532972.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<header>
